--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -9,13 +9,13 @@
         </f:section>
 
         <f:section name="stylesheets">
-            <link rel="stylesheet" href="{f:uri.resource(path: 'Stylesheets/foundation.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+            <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/foundation.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
             <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
         </f:section>
 
         <f:section name="scripts">
-            <script src="{f:uri.resource(path: 'Javascripts/vendor/modernizr.js', package: 'MapSeven.Neos.Snippets')}"></script>
-        </f:section>
+            <script src="{f:uri.resource(path: 'Scripts/vendor/modernizr.js', package: 'MapSeven.Neos.Snippets')}"></script>
+         </f:section>
     </head>
     <body>
         <f:section name="body">
@@ -84,8 +84,8 @@
 
         </f:section>
         <f:section name="bodyScripts">
-            <script src="{f:uri.resource(path: 'JavaScripts/vendor/jquery.js', package: 'MapSeven.Neos.Snippets')}"></script>
-            <script src="{f:uri.resource(path: 'JavaScripts/foundation.min.js', package: 'MapSeven.Neos.Snippets')}"></script>
+            <script src="{f:uri.resource(path: 'Scripts/vendor/jquery.js', package: 'MapSeven.Neos.Snippets')}"></script>
+            <script src="{f:uri.resource(path: 'Scripts/foundation.min.js', package: 'MapSeven.Neos.Snippets')}"></script>
             <script>
                 $(document).foundation();
             </script>
