[TASK] minor adjustments / cleanup

--- a/Resources/Private/Partials/Password.html
+++ b/Resources/Private/Partials/Password.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="small-6 columns">
+    <div class="small-12 columns">
         <f:form.password id="{property}" property="{property}" placeholder="{label}" class="{f:validation.ifHasErrors(for: 'registration.password', then: 'error')}" />
-        <f:render partial="FieldErrors" arguments="{property: 'password'}" />
+        <f:render partial="Errors" arguments="{property: 'password', object: object}" />
     </div>
 </div>
