--- a/Resources/Private/Partials/Errors.html
+++ b/Resources/Private/Partials/Errors.html
@@ -1,4 +1,4 @@
-<f:validation.results for="registration.{property}">
+<f:validation.results for="{object}.{property}">
 	<f:if condition="{validationResults.flattenedErrors}">
         <f:for each="{validationResults.errors}" as="error">
             <small class="error">{error}</small>
