--- a/Resources/Private/Partials/Textfield.html
+++ b/Resources/Private/Partials/Textfield.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="small-6 columns">
+    <div class="small-12 columns">
         <f:form.textfield id="{property}" property="{property}" placeholder="{label}" errorClass="error" />
-        <f:render partial="FieldErrors" arguments="{property: property}" />
+        <f:render partial="Errors" arguments="{property: property, object: object}" />
     </div>
 </div>
