--- a/Resources/Private/Templates/TypoScriptObjects/Menu/Partials/MainMenuItemList.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu/Partials/MainMenuItemList.html
@@ -1,15 +1,34 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
+{namespace feManager=MapSeven\Neos\FrontendUserManager\ViewHelpers}
 <f:for each="{items}" as="item" iteration="menuItemIterator">
-    <li class="{item.state}{f:if(condition: item.subItems, then: ' has-dropdown')}">
-        <f:if condition="{item.subItems}">
-            <f:then><a href="{neos:uri.node(node:item.node)}">{item.label}</a></f:then>
-            <f:else><neos:link.node node="{item.node}">{item.label}</neos:link.node></f:else>
-        </f:if>
-        <f:if condition="{item.subItems}">
-            <ul class="dropdown">
-                <f:render partial="MainMenuItemList" arguments="{items: item.subItems}" />
-            </ul>
-        </f:if>
-    </li>
-    <li class="divider"></li>
+    <feManager:security.ifAuthenticated providerName="{providerName}">
+        <f:then>
+            <f:if condition="{item.node.properties.showAtAnyLogin}">
+                <f:then>
+                    <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
+                </f:then>
+                <f:else>
+                    <f:if condition="{item.node.properties.hideAtAnyLogin}">
+                        <f:else>
+                            <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
+                        </f:else>
+                    </f:if>
+                </f:else>
+            </f:if>
+        </f:then>
+        <f:else>
+            <f:if condition="{item.node.properties.hideAtAnyLogin}">
+                <f:then>
+                    <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
+                </f:then>
+                <f:else>
+                    <f:if condition="{item.node.properties.showAtAnyLogin}">
+                        <f:else>
+                            <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
+                        </f:else>
+                    </f:if>
+                </f:else>
+            </f:if>
+        </f:else>
+    </feManager:security.ifAuthenticated>
 </f:for>
