--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -28,9 +28,7 @@
                     <!-- Title Area -->
                     <li class="name">
                         <h1>
-                            <a href="#">
-                                Snippets
-                            </a>
+                            <neos:link.node node="/sites/neossnippets">Snippets</neos:link.node>
                         </h1>
                     </li>
                     <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
@@ -77,7 +75,7 @@
             <div class="row">
                 <h1>{node.properties.title}</h1>
 
-                <div class="small-9 columns">{content.main -> f:format.raw()}</div>
+                <div class="small-9 columns" role="content">{content.main -> f:format.raw()}</div>
                 <div class="small-3 columns">{content.left -> f:format.raw()}</div>
             </div>
 
