[TASK] add footer

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -82,8 +82,16 @@
             <!-- End Main Content and Sidebar -->
             <footer class="row">
                 <div class="small-12 columns">
-                    <hr/>
-                    <p></p>
+                    <div class="row">
+                        <div class="small-6 small-centered columns">
+                            <ul class="text-center">
+                                <li><a href="https://twitter.com/khuppenbauer"><i class="fa fa-twitter fa-lg fa-fw"></i></a></li>
+                                <li><a href="https://github.com/khuppenbauer"><i class="fa fa-github fa-lg fa-fw"></i></a></li>
+                            </ul>
+                            <hr>
+                            {parts.metaMenu -> f:format.raw()}
+                        </div>
+                    </div>
                 </div>
             </footer>
         </f:section>
