--- a/Resources/Private/Partials/Select.html
+++ b/Resources/Private/Partials/Select.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="small-12 columns">
         <f:form.select id="{property}" property="{property}" options="{properties}" optionLabelField="name" prependOptionLabel="- {label} -" class="select2" />
+        <f:render partial="Errors" arguments="{property: property, object: object}" />
         <script>
             $("#{property}").select2();
         </script>
