--- a/Resources/Private/Partials/Tags.html
+++ b/Resources/Private/Partials/Tags.html
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="small-12 columns">
         <f:form.hidden id="{property}" name="{property}" style="width:300px;" value="{options -> snippets:tags()}" />
+        <f:render partial="Errors" arguments="{property: property, object: object}" />
         <script>
             $(document).ready(function () <![CDATA[{]]>
                 $("#{property}").select2(<![CDATA[{]]>
