--- a/Resources/Private/Templates/TypoScriptObjects/User/Logout/Index.html
+++ b/Resources/Private/Templates/TypoScriptObjects/User/Logout/Index.html
@@ -1,5 +1,3 @@
 <f:form action="logout" method="post">
-    <li class="has-form">
-        <f:form.submit value="Logout" class="button" />
-    </li>
+    <f:form.submit value="Logout" class="small button" />
 </f:form>
