--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -1,104 +1,52 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace media=TYPO3\Media\ViewHelpers}
-{namespace feManager=MapSeven\Neos\FrontendUserManager\ViewHelpers}
 <!doctype html>
 <html class="no-js" lang="en">
-    <head>
-        <f:section name="meta">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        </f:section>
+<head>
+    <f:section name="meta">
+        <meta name="viewport" content="initial-scale=1" />
+    </f:section>
 
-        <f:section name="stylesheets">
-            <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/foundation.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
-            <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
-            <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/foundation.custom.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
-        </f:section>
+    <f:section name="stylesheets">
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/foundation.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/app.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/theme.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/fontello.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/elementTransitions.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/component.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
 
-        <f:section name="scripts">
-            <script src="{f:uri.resource(path: 'Scripts/vendor/jquery.js', package: 'MapSeven.Neos.Snippets')}"></script>
-            <script src="{f:uri.resource(path: 'Scripts/vendor/modernizr.js', package: 'MapSeven.Neos.Snippets')}"></script>
-        </f:section>
-    </head>
-    <body>
-        <f:section name="body">
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/custom.css', package: 'MapSeven.Neos.Snippets')}" media="all" />
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,500,600' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Bentham' rel='stylesheet' type='text/css'>
+    </f:section>
 
-            <!-- Top Bar -->
+    <f:section name="scripts">
+        <script src="{f:uri.resource(path: 'Scripts/jquery-1.9.0.min.js', package: 'MapSeven.Neos.Snippets')}"></script>
+        <script src="{f:uri.resource(path: 'Scripts/modernizr.custom.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    </f:section>
+</head>
+<body>
+<f:section name="bodyScripts">
+    <script src="{f:uri.resource(path: 'Scripts/foundation.min.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/foundation/foundation.alerts.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/tooltipmenu.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/classie.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/elementTransitions.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/modalEffects.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/grid.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <script src="{f:uri.resource(path: 'Scripts/custom.js', package: 'MapSeven.Neos.Snippets')}"></script>
 
-            <nav class="top-bar" data-topbar>
-                <ul class="title-area">
-                    <!-- Title Area -->
-                    <li class="name">
-                        <h1>
-                            <neos:link.node node="/sites/neossnippets">Snippets</neos:link.node>
-                        </h1>
-                    </li>
-                    <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
-                </ul>
-
-                <section class="top-bar-section">
-                    <!-- Right Nav Section -->
-                    <ul class="left">
-                        <li class="divider"></li>
-                        {parts.mainMenu -> f:format.raw()}
-                    </ul>
-                    <ul class="right">
-                        <li class="has-dropdown">
-                            <feManager:security.ifAuthenticated providerName="{providerName}">
-                                <f:then>
-                                    <a href="#"><i class="fa fa-user fa-fw"></i><feManager:security.accountIdentifier /></a>
-                                </f:then>
-                                <f:else>
-                                    <a href="#"><i class="fa fa-sign-in fa-fw"></i>Login</a>
-                                </f:else>
-                            </feManager:security.ifAuthenticated>
-                            <ul class="dropdown">
-                                <feManager:security.ifAuthenticated providerName="{providerName}">
-                                    <f:then></f:then>
-                                    <f:else>
-                                        {parts.login -> f:format.raw()}
-                                    </f:else>
-                                </feManager:security.ifAuthenticated>
-                                <li class="divider"></li>
-                                {parts.userMenu -> f:format.raw()}
-                                <feManager:security.ifAuthenticated providerName="{providerName}">
-                                    {parts.logout -> f:format.raw()}
-                                </feManager:security.ifAuthenticated>
-                            </ul>
-                        </li>
-                    </ul>
-                </section>
-            </nav>
-            <!-- End Top Bar -->
-
-
-            <!-- Main Page Content and Sidebar -->
-
-            <div class="row">
-                <div class="small-12 columns"><h1>{node.properties.title}</h1></div>
-                <div class="small-12 columns" role="content">{content.main -> f:format.raw()}</div>
-            </div>
-
-            <!-- End Main Content and Sidebar -->
-            <footer class="row">
-                <div class="small-12 columns">
-                    <div class="row">
-                        <div class="small-6 small-centered columns">
-                            <ul class="text-center">
-                                <li><a href="https://twitter.com/khuppenbauer"><i class="fa fa-twitter fa-lg fa-fw"></i></a></li>
-                                <li><a href="https://github.com/khuppenbauer"><i class="fa fa-github fa-lg fa-fw"></i></a></li>
-                            </ul>
-                            <hr>
-                            {parts.metaMenu -> f:format.raw()}
-                        </div>
-                    </div>
-                </div>
-            </footer>
-        </f:section>
-        <f:section name="bodyScripts">
-            <script src="{f:uri.resource(path: 'Scripts/foundation.min.js', package: 'MapSeven.Neos.Snippets')}"></script>
+    <f:security.ifAccess resource="TYPO3_Neos_Backend_GeneralAccess">
+        <f:then></f:then>
+        <f:else>
             <script>
-                $(document).foundation();
+                $(document).ready(function ($) {
+                    $('div.neos-contentcollection').contents().unwrap();
+                });
             </script>
-        </f:section>
-    </body>
+        </f:else>
+    </f:security.ifAccess>
+</f:section>
+</body>
 </html>
