--- a/Resources/Private/Templates/TypoScriptObjects/Menu/MainMenu.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu/MainMenu.html
@@ -1,4 +1,4 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
-<f:render partial="MainMenuItemList" arguments="{items: items, site: site, providerName: providerName}" />
+<f:render partial="MainMenuItemList" arguments="{items: items, site: site}" />
 
 
