--- a/Resources/Private/Templates/TypoScriptObjects/Menu/Partials/MainMenuItem.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu/Partials/MainMenuItem.html
@@ -2,12 +2,11 @@
 <li class="{item.state}{f:if(condition: item.subItems, then: ' has-dropdown')}">
     <f:if condition="{item.subItems}">
         <f:then><a href="{neos:uri.node(node:item.node)}">{item.label}</a></f:then>
-        <f:else><neos:link.node node="{item.node}">{item.label}</neos:link.node></f:else>
+        <f:else><neos:link.node node="{item.node}" class="{item.state}">{item.label}</neos:link.node></f:else>
     </f:if>
     <f:if condition="{item.subItems}">
         <ul class="dropdown">
-            <f:render partial="MainMenuItemList" arguments="{items: item.subItems, providerName: providerName}" />
+            <f:render partial="MainMenuItemList" arguments="{items: item.subItems}" />
         </ul>
     </f:if>
 </li>
-<li class="divider"></li>
