--- a/Resources/Private/Templates/TypoScriptObjects/Menu/Partials/MainMenuItemList.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu/Partials/MainMenuItemList.html
@@ -1,34 +1,4 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
-{namespace feManager=MapSeven\Neos\FrontendUserManager\ViewHelpers}
 <f:for each="{items}" as="item" iteration="menuItemIterator">
-    <feManager:security.ifAuthenticated providerName="{providerName}">
-        <f:then>
-            <f:if condition="{item.node.properties.showAtAnyLogin}">
-                <f:then>
-                    <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
-                </f:then>
-                <f:else>
-                    <f:if condition="{item.node.properties.hideAtAnyLogin}">
-                        <f:else>
-                            <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
-                        </f:else>
-                    </f:if>
-                </f:else>
-            </f:if>
-        </f:then>
-        <f:else>
-            <f:if condition="{item.node.properties.hideAtAnyLogin}">
-                <f:then>
-                    <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
-                </f:then>
-                <f:else>
-                    <f:if condition="{item.node.properties.showAtAnyLogin}">
-                        <f:else>
-                            <f:render partial="MainMenuItem" arguments="{item: item, providerName: providerName}" />
-                        </f:else>
-                    </f:if>
-                </f:else>
-            </f:if>
-        </f:else>
-    </feManager:security.ifAuthenticated>
+    <f:render partial="MainMenuItem" arguments="{item: item}" />
 </f:for>
