[TASK] make footer links editable

--- a/Resources/Private/Templates/Page/BlogLeftsidebar.html
+++ b/Resources/Private/Templates/Page/BlogLeftsidebar.html
@@ -20,6 +20,6 @@
     </div>
     <!-- /Content Leftsidebar -->
 
-    <f:render partial="Footer" />
+    <f:render partial="Footer" arguments="{content:content}"/>
 
 </f:section>
