--- a/Resources/Private/Templates/Page/BlogRightsidebar.html
+++ b/Resources/Private/Templates/Page/BlogRightsidebar.html
@@ -20,6 +20,6 @@
     </div>
     <!-- /Content Rightsidebar -->
 
-    <f:render partial="Footer" />
+    <f:render partial="Footer" arguments="{content:content}"/>
 
 </f:section>
