--- a/Resources/Private/Templates/Page/PageLeftsidebar.html
+++ b/Resources/Private/Templates/Page/PageLeftsidebar.html
@@ -22,6 +22,6 @@
     </div>
     <!-- /Content -->
 
-    <f:render partial="Footer" />
+    <f:render partial="Footer" arguments="{content:content}"/>
 
 </f:section>
