--- a/Resources/Public/Styles/custom.css
+++ b/Resources/Public/Styles/custom.css
@@ -93,7 +93,21 @@ div.share_buttons ul li {
 nav a.current  {color:#ae2941!important;font-weight: 800;}
 nav a.current:after  {width: 100%;content: '';display: block;height:3px;background-color: #ae2941;position: absolute;bottom: 0;}
 nav .cbp-tm-submenu a.current:after {display: none;background: #ae2941;}
-nav ul.cbp-tm-submenu li a.active {color: #fff!important;}
+nav ul.cbp-tm-submenu li a.current {color: #fff!important;}
+
+.cbp-tm-submenu > li > a {
+    padding:5px 2.3em 5px 1.2em;
+    /* top/bottom paddings in 'em' cause a tiny "jump" in Chrome on Win */
+    display:block;
+    font-size:1em;
+    position:relative;
+    color:#ccc;
+    -webkit-transition:all .2s;
+    -moz-transition:all .2s;
+    transition:all .2s;
+    border:0;
+    font-weight:300;
+}
 
 a.label:hover, a.label:focus {
     color: #ffffff;
