[TASK] adjust login / add registration to header

--- a/Resources/Private/Templates/Page/BlogRightsidebar.html
+++ b/Resources/Private/Templates/Page/BlogRightsidebar.html
@@ -21,5 +21,5 @@
     <!-- /Content Rightsidebar -->
 
     <f:render partial="Footer" arguments="{content:content}"/>
-
+    <f:render partial="Reveal" arguments="{parts:parts}"/>
 </f:section>
