--- a/Resources/Private/Templates/Page/PageLeftsidebar.html
+++ b/Resources/Private/Templates/Page/PageLeftsidebar.html
@@ -23,5 +23,5 @@
     <!-- /Content -->
 
     <f:render partial="Footer" arguments="{content:content}"/>
-
+    <f:render partial="Reveal" arguments="{parts:parts}"/>
 </f:section>
