--- a/Resources/Private/Templates/TypoScriptObjects/User/Logout/Index.html
+++ b/Resources/Private/Templates/TypoScriptObjects/User/Logout/Index.html
@@ -1,3 +1,4 @@
-<f:form action="logout" method="post">
+{namespace user=Flowpack\Neos\FrontendUserManager\ViewHelpers}
+<user:form action="logout" actionUri="self" method="post">
     <f:form.submit value="Logout" class="small button" />
-</f:form>
+</user:form>
