--- a/Resources/Private/Templates/Page/BlogLeftsidebar.html
+++ b/Resources/Private/Templates/Page/BlogLeftsidebar.html
@@ -21,5 +21,5 @@
     <!-- /Content Leftsidebar -->
 
     <f:render partial="Footer" arguments="{content:content}"/>
-
+    <f:render partial="Reveal" arguments="{parts:parts}"/>
 </f:section>
