--- a/Resources/Private/Templates/TypoScriptObjects/Menu/MainMenu.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu/MainMenu.html
@@ -1,4 +1,6 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
-<f:render partial="MainMenuItemList" arguments="{items: items, site: site}" />
+<ul id="cbp-tm-menu" class="cbp-tm-menu left">
+    <f:render partial="MainMenuItemList" arguments="{items: items, site: site}" />
+</ul>
 
 
