--- a/Resources/Private/Templates/Page/BlogRightsidebar.html
+++ b/Resources/Private/Templates/Page/BlogRightsidebar.html
@@ -8,11 +8,13 @@
     <div class="maincontent fullcontent">
         <div class="row pageview">
             <!-- Blog -->
+            <div class="large-8 columns blogview">
                 {content.main -> f:format.raw()}
+            </div>
             <!-- /Blog -->
 
             <!-- Sidebar -->
-            <div class="large-4 columns sidebar">
+            <div class="large-4 columns">
                 {content.sidebar -> f:format.raw()}
             </div>
             <!-- /Sidebar -->
