--- a/Resources/Private/Templates/Post/Show.html
+++ b/Resources/Private/Templates/Post/Show.html
@@ -1,110 +1,108 @@
 {namespace snippets=Flowpack\Snippets\ViewHelpers}
-<div class="large-8 columns blog_postview">
-    <h1>{post.title}</h1>
-    <div class="row">
-        <div class="small-12 columns">
-            <ul class="no-bullet">
-                <li class="left">
-                    <time datetime="{f:format.date(date: post.date)}">
-                        <i class="fa fa-calendar fa-fw"></i><f:translate id="post.date" arguments="{0: post.date}"><![CDATA[{0,datetime,date,short}]]</f:translate>
-                    </time>
-                </li>
-                <li class="left">
-                    <f:if condition="{post.author.name.alias}">
-                        <i class="fa fa-user fa-fw"></i><a href="#" data-author="{post.author.name.alias}">{post.author.name.alias}</a>
-                    </f:if>
-                </li>
-                <li class="left">
-                    <i class="fa fa-folder-open fa-fw"></i> <a href="#" data-category="{post.category.name}">{post.category.name}</a>
-                </li>
-                <li class="left">
-                    <i class="fa fa-tags fa-fw"></i>
-                    <f:for each="{post.tags}" as="tag" iteration="iterator">
-                        <a href="#" data-tags="{tag.name}">{tag.name}{f:if(condition:iterator.isLast, then: '', else: ',')}</a>
-                    </f:for>
-                </li>
-            </ul>
-            <br />
-        </div>
+<h1>{post.title}</h1>
+<div class="row">
+    <div class="small-12 columns">
+        <ul class="no-bullet">
+            <li class="left">
+                <time datetime="{f:format.date(date: post.date)}">
+                    <i class="fa fa-calendar fa-fw"></i><f:translate id="post.date" arguments="{0: post.date}"><![CDATA[{0,datetime,date,short}]]</f:translate>
+                </time>
+            </li>
+            <li class="left">
+                <f:if condition="{post.author.name.alias}">
+                    <i class="fa fa-user fa-fw"></i><f:link.action action="search" arguments="{author: post.author.name.alias}" controller="Search">{post.author.name.alias}</f:link.action>
+                </f:if>
+            </li>
+            <li class="left">
+                <i class="fa fa-folder-open fa-fw"></i><f:link.action action="search" arguments="{category: post.category.name}" controller="Search">{post.category.name}</f:link.action>
+            </li>
+            <li class="left">
+                <i class="fa fa-tags fa-fw"></i>
+                <f:for each="{post.tags}" as="tag" iteration="iterator">
+                    <f:link.action action="search" arguments="{tag: tag.name}" controller="Search">{tag.name}{f:if(condition:iterator.isLast, then: '', else: ',')}</f:link.action>
+                </f:for>
+            </li>
+        </ul>
+        <br />
     </div>
-    <div class="row">
-        <div class="small-12 columns">
-            <f:if condition="{post.description}">
-                <p>{post.description}</p>
-            </f:if>
-            {post.content -> snippets:parsedown()}
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="small-12 columns share_buttons">
-            <ul class="no-bullet social_btn">
-                <snippets:security.ifAuthenticated providerName="FrontendProvider">
-                    <f:then>
-                        <li><a href="#"><i class="jq-up fa fa-thumbs-up" style="cursor: pointer" data-post="{post -> f:format.identifier()}" data-user="{user -> f:format.identifier()}"></i> <span class="jq-upVotes">{post.numberOfUpVotes}</span></a></li>
-                        <li><a href="#"><i class="jq-down fa fa-thumbs-down" style="cursor: pointer"  data-post="{post -> f:format.identifier()}" data-user="{user -> f:format.identifier()}"></i> <span class="jq-downVotes">{post.numberOfDownVotes}</span></a></li>
-                        <li><a href="#"><i class="jq-favor fa fa-star{f:if(condition:post.favorite, then: '', else: '-o')}" style="cursor:pointer" data-post="{post -> f:format.identifier()}" data-user="{user -> f:format.identifier()}"></i> <span class="jq-favorites">{post.numberOfFavorites}</span></a></li>
-                    </f:then>
-                    <f:else>
-                        <li><a href="#"><i class="jq-up fa fa-thumbs-up" style="cursor: pointer"></i> <span class="jq-upVotes">{post.numberOfUpVotes}</span></a></li>
-                        <li><a href="#"><i class="jq-down fa fa-thumbs-down" style="cursor: pointer"></i> <span class="jq-downVotes">{post.numberOfDownVotes}</span></a></li>
-                        <li><a href="#"><i class="jq-favor fa fa-star{f:if(condition:post.favorite, then: '', else: '-o')}" style="cursor:pointer"></i> <span class="jq-favorites">{post.numberOfFavorites}</span></a></li>
-                    </f:else>
-                </snippets:security.ifAuthenticated>
-            </ul>
-
-        </div>
-    </div>
-
-    <f:if condition="{post.options.share}">
-        <div id="socialshareprivacy"></div>
-
-        <div class="clr"></div>
-    </f:if>
-    <f:if condition="{post.options.comment}">
-        <div class="row">
-            <div class="small-12 columns">
-                <!-- Comments -->
-                <div class="responses" id="comments">
-                    <f:if condition="{post.comments}">
-                        <h3 class="title"><f:translate id="post.comments" arguments="{0: post.numberOfComments}" quantity="{post.numberOfComments}"></f:translate></h3>
-                        <ul class="comments">
-                            <f:for each="{post.comments}" as="comment" key="flowidentifier" iteration="commentIterator" reverse="TRUE">
-                                <li class="comment_item" id="comment-{flowidentifier}">
-                                    <span class="author">{comment.author.name.alias}</span> —
-                                    <time datetime="{f:format.date(date: comment.date)}">
-                                        <f:translate id="comment.date" arguments="{0: comment.date}">+<![CDATA[{0,datetime,date,login}]]</f:translate>
-                                    </time>
-                                    <p class="comment_text"><f:format.nl2br>{comment.content}</f:format.nl2br></p>
-                                </li>
-                            </f:for>
-                        </ul>
-                    </f:if>
-
-                    <!-- Form Reply Comment -->
-                    <section id="respond">
-                        <snippets:security.ifAuthenticated providerName="FrontendProvider">
-                            <f:then>
-                                <h4 class="title"><f:translate id="comment.reply">Leave a reply</f:translate>:</h4>
-                                <div class="form_reply">
-                                <f:form action="create" arguments="{post: post}" controller="Comment" object="{newComment}" name="newComment" class="form newcomment" section="comments">
-                                    <f:render partial="Textarea" arguments="{label: '{f:translate(id: \'form.comment\', value: \'Comment\')}', property: 'content', object: 'comment', rows:3}" />
-                                    <div class="cta_btn">
-                                        <f:form.submit value="{f:translate(id: 'form.submit.comment', value: 'Add Comment')}" class="button left" />
-                                    </div>
-                                </f:form>
-                                </div>
-                            </f:then>
-                            <f:else>
-                                <h4 class="title"><f:translate id="comment.login">Login to add your comment</f:translate>:</h4>
-                                <f:render partial="Login" arguments="{arguments: {post: post}}" />
-                            </f:else>
-                        </snippets:security.ifAuthenticated>
-                    </section>
-                    <!-- /Form Reply Comment -->
-                </div>
-                <!-- /Comments -->
-            </div>
-        </div>
-    </f:if>
 </div>
+<div class="row">
+    <div class="small-12 columns">
+        <f:if condition="{post.description}">
+            <p>{post.description}</p>
+        </f:if>
+        {post.content -> snippets:parsedown()}
+    </div>
+</div>
+
+<div class="row">
+    <div class="small-12 columns share_buttons">
+        <ul class="no-bullet social_btn">
+            <snippets:security.ifAuthenticated providerName="FrontendProvider">
+                <f:then>
+                    <li><a href="#"><i class="jq-up fa fa-thumbs{f:if(condition:post.upVote, then: '', else: '-o')}-up" style="cursor: pointer" data-post="{post -> f:format.identifier()}"></i> <span class="jq-upVotes">{post.numberOfUpVotes}</span></a></li>
+                    <li><a href="#"><i class="jq-down fa fa-thumbs{f:if(condition:post.downVote, then: '', else: '-o')}-down" style="cursor: pointer"  data-post="{post -> f:format.identifier()}"></i> <span class="jq-downVotes">{post.numberOfDownVotes}</span></a></li>
+                    <li><a href="#"><i class="jq-favor fa fa-star{f:if(condition:post.favorite, then: '', else: '-o')}" style="cursor:pointer" data-post="{post -> f:format.identifier()}"></i> <span class="jq-favorites">{post.numberOfFavorites}</span></a></li>
+                </f:then>
+                <f:else>
+                    <li><a href="#"><i class="jq-up fa fa-thumbs-o-up" style="cursor: pointer"></i> <span class="jq-upVotes">{post.numberOfUpVotes}</span></a></li>
+                    <li><a href="#"><i class="jq-down fa fa-thumbs-o-down" style="cursor: pointer"></i> <span class="jq-downVotes">{post.numberOfDownVotes}</span></a></li>
+                    <li><a href="#"><i class="jq-favor fa fa-star-o" style="cursor:pointer"></i> <span class="jq-favorites">{post.numberOfFavorites}</span></a></li>
+                </f:else>
+            </snippets:security.ifAuthenticated>
+        </ul>
+
+    </div>
+</div>
+
+<f:if condition="{post.options.share}">
+    <div id="socialshareprivacy"></div>
+
+    <div class="clr"></div>
+</f:if>
+<f:if condition="{post.options.comment}">
+    <div class="row">
+        <div class="small-12 columns">
+            <!-- Comments -->
+            <div class="responses" id="comments">
+                <f:if condition="{post.comments}">
+                    <h3 class="title"><f:translate id="post.comments" arguments="{0: post.numberOfComments}" quantity="{post.numberOfComments}"></f:translate></h3>
+                    <ul class="comments">
+                        <f:for each="{post.comments}" as="comment" key="flowidentifier" iteration="commentIterator" reverse="TRUE">
+                            <li class="comment_item" id="comment-{flowidentifier}">
+                                <span class="author">{comment.author.name.alias}</span> —
+                                <time datetime="{f:format.date(date: comment.date)}">
+                                    <f:translate id="comment.date" arguments="{0: comment.date}">+<![CDATA[{0,datetime,date,login}]]</f:translate>
+                                </time>
+                                <p class="comment_text"><f:format.nl2br>{comment.content}</f:format.nl2br></p>
+                            </li>
+                        </f:for>
+                    </ul>
+                </f:if>
+
+                <!-- Form Reply Comment -->
+                <section id="respond">
+                    <snippets:security.ifAuthenticated providerName="FrontendProvider">
+                        <f:then>
+                            <h4 class="title"><f:translate id="comment.reply">Leave a reply</f:translate>:</h4>
+                            <div class="form_reply">
+                            <f:form action="create" arguments="{post: post}" controller="Comment" object="{newComment}" name="newComment" class="form newcomment" section="comments">
+                                <f:render partial="Textarea" arguments="{label: '{f:translate(id: \'form.comment\', value: \'Comment\')}', property: 'content', object: 'comment', rows:3}" />
+                                <div class="cta_btn">
+                                    <f:form.submit value="{f:translate(id: 'form.submit.comment', value: 'Add Comment')}" class="button left" />
+                                </div>
+                            </f:form>
+                            </div>
+                        </f:then>
+                        <f:else>
+                            <h4 class="title"><f:translate id="comment.login">Login to add your comment</f:translate>:</h4>
+                            <f:render partial="Login" arguments="{arguments: {post: post}}" />
+                        </f:else>
+                    </snippets:security.ifAuthenticated>
+                </section>
+                <!-- /Form Reply Comment -->
+            </div>
+            <!-- /Comments -->
+        </div>
+    </div>
+</f:if>
