[TASK] Apply migration TYPO3.Fluid-20141113120800
This commit contains the result of applying migration
 TYPO3.Fluid-20141113120800.
to this package.

Migration: TYPO3.Fluid-20141113120800

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -37,7 +37,7 @@
     <script src="{f:uri.resource(path: 'Scripts/grid.js', package: 'MapSeven.Neos.Snippets')}"></script>
     <script src="{f:uri.resource(path: 'Scripts/custom.js', package: 'MapSeven.Neos.Snippets')}"></script>
 
-    <f:security.ifAccess resource="TYPO3_Neos_Backend_GeneralAccess">
+    <f:security.ifAccess privilegeTarget="TYPO3_Neos_Backend_GeneralAccess">
         <f:then></f:then>
         <f:else>
             <script>
