[TASK] add/adjust user and meta menu

--- a/Resources/Private/Templates/Page/PageLeftsidebar.html
+++ b/Resources/Private/Templates/Page/PageLeftsidebar.html
@@ -22,6 +22,6 @@
     </div>
     <!-- /Content -->
 
-    <f:render partial="Footer" arguments="{content:content}"/>
+    <f:render partial="Footer" arguments="{content:content, parts:parts}"/>
     <f:render partial="Reveal" arguments="{parts:parts}"/>
 </f:section>
