--- a/Resources/Private/Templates/Page/PageFull.html
+++ b/Resources/Private/Templates/Page/PageFull.html
@@ -14,6 +14,6 @@
     </div>
     <!-- /Content -->
 
-    <f:render partial="Footer" arguments="{content:content}"/>
+    <f:render partial="Footer" arguments="{content:content, parts:parts}"/>
     <f:render partial="Reveal" arguments="{parts:parts}"/>
 </f:section>
