--- a/Resources/Private/Templates/TypoScriptObjects/Menu/UserMenu.html
+++ b/Resources/Private/Templates/TypoScriptObjects/Menu/UserMenu.html
@@ -1,7 +1,13 @@
 <f:if condition="{isAuthenticated}">
     <f:then>
         <ul id="cbp-tm-menu-user" class="cbp-tm-menu user right">
-            <li><span class="normal">{user.name.alias}</span></li>
+            <li><span class="normal"><i class="fa fa-bell"></i><span class="button round tiny" style="position: absolute; top: -10px; left: 20px;">5</span></span> </li>
+            <li>
+                <span class="normal"><i class="fa fa-caret-down"></i> {user.name.alias}</span>
+                <ul class="cbp-tm-submenu">
+                    <f:render partial="MainMenuItemList" arguments="{items: items, site: site}" />
+                </ul>
+            </li>
             <li>{logout -> f:format.raw()}</li>
         </ul>
     </f:then>
